updated some figuers

--- a/Robotics 1/LatexSourceFile/Robotics1.tex
+++ b/Robotics 1/LatexSourceFile/Robotics1.tex
@@ -89,7 +89,7 @@ everything is defined respect to the base frame, usually denoted as $\Sigma_0$.
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.45\textwidth ]{images/spatial_robot.eps} 
+    \includegraphics[width=0.45\textwidth ]{images/spatial_robot_new.eps} 
     \caption{spatial R4 robot}
     \label{img:spatialR4}
 \end{figure}
@@ -127,7 +127,7 @@ Each \textit{homogeneous matrix} $^{i-1}A_i$ describe the pose of the $i$-th joi
 If there are another frame $\Sigma_w$, the new matrix can be computed as follows\begin{equation}
     {}^w T_e={}^w T_0{}^0 T_e.
 \end{equation}\begin{center}
-    \includegraphics[width=0.7\textwidth ]{images/T_matrix.eps} 
+    \includegraphics[width=0.8\textwidth ]{images/T_matrix_new.eps} 
 \end{center}
 
 The \textbf{Inverse Kinematics} is the opposite problem, given a position ${}^0\mathbf p_e$ for the end effector, we want to find the values of $\boldsymbol\theta$ such that\begin{equation}
@@ -144,7 +144,7 @@ Since the superposition principle is valid, the components resulting from the mo
 \end{itemize}
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.3\textwidth ]{images/velocity.eps} 
+    \includegraphics[width=0.28\textwidth ]{images/velocity_new.eps} 
     \caption{possible trajectory by moving $\theta_1$}
     \label{img:velocity_trajectory}
 \end{figure}
@@ -257,7 +257,7 @@ The previous example showed how certain algebraic relationships are connected to
 
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.4\textwidth ]{images/impossible_velocity.eps} 
+    \includegraphics[width=0.4\textwidth ]{images/impossible_velocity_new.eps} 
     \caption{3R spatial robot}
     \label{img:impossible_traj}
 \end{figure}
