Add introduction chapter on AI agents and rationality
Introduced a new chapter explaining the concept of agents in artificial intelligence, including their interaction with the environment via sensors and actuators, and the definition of rational agents. Updated both the LaTeX source and the generated PDF.

--- a/Artificial intelligence/LatexSourceFile/ArtificialIntelligence.tex
+++ b/Artificial intelligence/LatexSourceFile/ArtificialIntelligence.tex
@@ -60,5 +60,10 @@ This document summarizes and presents the topics for the \titolo course for the 
 %==================FOOTER e HEADER=======================%
 
 %==================INIZIO======================%
-
+\chapter{Introduzione}
+In the context of the artificial intelligence, an \textbf{agent} is an entity that can\begin{itemize}
+    \item Perceive the environment through \textit{sensors} (percepts)
+    \item Act upon the environment through \textit{actuators} (actions).
+\end{itemize}
+We say that an agent is \textbf{rational} if he selects the action that maximize a given \textit{performance measure}, informally, he attempts to do ''the right thing''. The best case is hypothetical and often unattainable, because the agent usually can't perform all the actions needed, and can't perceive all the information about the environment.
 \end{document}
